[metadata]
name = EOTorchLoader
version = 0.0.1
author = Nicolas DAVID
author_email = nicolas.david@ign.fr
description = Pytorch data loader for Earth observation imagery
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ndavid/EOTorchLoader
project_urls =
    Docs: pages = https://ndavid.github.io/EOTorchLoader/
    GitHub: issues = https://github.com/ndavid/EOTorchLoader/issues
    GitHub: repo = https://github.com/ndavid/EOTorchLoader
license = "Apache-2.0"
readme = "README.md"
python = "^3.8"

keywords = ["pytorch", "earth observation", "remote sensing", "deep learning"]
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
   numpy>=1.19
   torch>=1.10.0
   pytorch-lightning>=1.5.8
   matplotlib>=3.1.3
   tqdm>=4.40.0
   rasterio>=1.1.5
   pandas>=1.0.0

[options.packages.find]
where = src
