[metadata]
name = EOTorchLoader
version = attr: eotorchloader.__version__
author = Nicolas DAVID
author_email = nicolas.david@ign.fr
description = Pytorch data loader for Earth observation imagery
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ndavid/EOTorchLoader
project_urls =
    Docs: pages = https://ndavid.github.io/EOTorchLoader/
    GitHub: issues = https://github.com/ndavid/EOTorchLoader/issues
    GitHub: repo = https://github.com/ndavid/EOTorchLoader
license = "Apache-2.0"
readme = "README.md"
python = "^3.8"

keywords = ["pytorch", "earth observation", "remote sensing", "deep learning"]
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Image Processing
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
   numpy>=1.19
   torch>=1.10.0
   pytorch-lightning>=1.5.8
   matplotlib>=3.1.3
   tqdm>=4.40.0
   rasterio>=1.1.5
   pandas>=1.0.0
include_package_data = True

[options.package_data]
tutorial = tutorials/*.ipynb

[options.packages.find]
where = src

[options.extras_require]
dev =
    black==22.1
    pre-commit>=2.17
    nbstripout>=0.5.0
doc =
    sphinx>=4.2
    nbsphinx>=0.8
    sphinx-panels>=0.5.0
    sphinx-tabs>=3.0.0
    numpydoc>=1.2
    pydata-sphinx-theme>=0.8.0
